Fixed layout bug

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ input[type="number"] {
   align-items: center;
   justify-content: center;
   position: fixed;
+  top: 0;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.69);
